fix footer visibility on mobile

--- a/src/scss/blocks/_active-icon.scss
+++ b/src/scss/blocks/_active-icon.scss
@@ -1,4 +1,8 @@
 .active-icon {
     filter: none;
     opacity: 1;
+
+    &:hover {
+        opacity: 1;
+    }
 }
