--- a/src/scss/blocks/_photo-info.scss
+++ b/src/scss/blocks/_photo-info.scss
@@ -36,6 +36,7 @@
         line-height: 24px;
         text-transform: uppercase;
         color: $red;
+        padding-right: 4px;
     }
 
     &__like-number {
