--- a/src/scss/blocks/_round-button.scss
+++ b/src/scss/blocks/_round-button.scss
@@ -2,8 +2,8 @@
     font-size: 18px;
     font-weight: 700;
     line-height: 18px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 18px;
+    padding-bottom: 14px;
     background-color: white;
     border-radius: 55px;
 
