--- a/src/scss/blocks/_textual.scss
+++ b/src/scss/blocks/_textual.scss
@@ -3,7 +3,7 @@
     padding: 46px 0 48px 0;
 
     &\--photo-bottom {
-        padding: 40px 0;
+        padding: 42px 0;
     }
 
     &__text {
